<resources>
    <string name="app_name">Material Weight Calculator LITE</string>
    <string name="app_name_original">* PAVING CALCULATOR *</string>
    <string name="app_url">https://play.google.com/store/apps/details?id=</string>
    <string name="email1">support@apps4builders.com</string>
    <string name="about">http://apps4builders.com</string>
    <string name="contact_us">http://apps4builders.com</string>
    <string name="twitter_link">http://twitter.com/apps4builders</string>
    <string name="trade_people_search">http://apps4builders.com</string>
    <string name="supplier_search">http://apps4builders.com</string>
    <string name="create_table_sql">\n		CREATE TABLE IF NOT EXISTS settings(unit INT);\n		CREATE TABLE IF NOT EXISTS notes(id integer primary key autoincrement,date TEXT,note TEXT);\n		\nCREATE TABLE IF NOT EXISTS jobs(date TEXT PRIMARY KEY,name TEXT,address TEXT,phone TEXT,email TEXT,l1 INT,w1 INT,l2 INT,w2 INT)\n		\nCREATE TABLE IF NOT EXISTS jobstable(id integer primary key autoincrement,date TEXT,name TEXT,address TEXT,phone TEXT,email TEXT,quote TEXT,method TEXT,option TEXT,shape TEXT,value TEXT,param1 TEXT,param2 TEXT,param3 TEXT,param4 TEXT,param5 TEXT,margin TEXT,tax TEXT,title TEXT)\n		</string>
    <string name="google_admov_unit_id">ca-app-pub-6892657406793566/9689589566</string>
    <string name="folders">Folders</string>
    <string name="guides">Guides</string>
    <string name="start">Start</string>
    <string name="calculations">Calculations</string>
    <string name="notes">Notes</string>
    <string name="questions">Questions</string>
    <string name="manual">Manual</string>
    <string name="safety">Safety</string>
    <string name="tools">Tools</string>
    <string name="press_for_calculator">Press for Calculator Answers</string>
    <string name="calculation_answers">Calculation Answers</string>
    <string name="volume_weight">Volume &amp; Weights</string>
    <string name="material_weights">Material - Weights</string>
    <string-array name="type_array">
        <item>Metric M&#179;</item>
        <item>Imperial FT&#179;</item>
    </string-array>
    <string-array name="material_name_array">
        
        <item>"Liquid - Acid"</item>
        <item>"Liquid - Acetone"</item>
        <item>"Liquid - Alcohol"</item>
        <item>"Liquid - Ammonia"</item>
        <item>"Liquid - Analine"</item>
        <item>"Liquid - Beer"</item>
        <item>"Liquid - Benzene"</item>
        <item>"Liquid - Butane"</item>
        <item>"Liquid - Castor Oil"</item>
        <item>"Liquid - Chloride"</item>
        <item>"Liquid - Chloroform"</item>
        <item>"Liquid - Citric Acid"</item>
        <item>"Liquid - Coconut Oil"</item>
        <item>"Liquid - Crude Oil"</item>
        <item>"Liquid - Diesel Fuel"</item>
        <item>"Liquid - Ethane"</item>
        <item>"Liquid - Gasoline"</item>
        <item>"Liquid - Keresone"</item>
        <item>"Liquid - Linseed Oil"</item>
        <item>"Liquid - Methane"</item>
        <item>"Liquid - Methanol"</item>
        <item>"Liquid - Motor Oil"</item>
        <item>"Liquid - Milk"</item>
        <item>"Liquid - Olive Oil"</item>
        <item>"Liquid - Oxygen"</item>

        
        <item>"Liquid - Petrol"</item>
        <item>"Liquid - Propane"</item>
        <item>"Liquid - Sea Water"</item>
        <item>"Liquid - Sodium Hydroxide"</item>
        <item>"Liquid - Sulphuric Acid"</item>
        <item>"Liquid - Sunflower Oil"</item>
        <item>"Liquid - Water"</item>
        <item>"Metal - Aluminium"</item>
        <item>"Metal - Brass"</item>
        <item>"Metal - Bronze"</item>
        <item>"Metal - Cast Iron"</item>
        <item>"Metal - Colbolt"</item>
        <item>"Metal - Copper"</item>
        <item>"Metal - Gold"</item>
        <item>"Metal - Lead"</item>
        <item>"Metal - Magnesium"</item>
        <item>"Metal - Mercury"</item>
        <item>"Metal - Nickel"</item>
        <item>"Metal - Platinum"</item>
        <item>"Metal - Plutonium"</item>
        <item>"Metal - Silver"</item>
        <item>"Metal - Steel"</item>
        <item>"Metal - Tin"</item>
        <item>"Metal - Titanium"</item>
        <item>"Metal - Tungsten"</item>

        
        <item>"Metal - Uranium"</item>
        <item>"Metal - Vanadium"</item>
        <item>"Metal - Zinc"</item>
        <item>"Other - Aggregates / Blue Metal"</item>
        <item>"Other - Aggregates / Road Base"</item>
        <item>"Other - Aggregates / Recycled"</item>
        <item>"Other - Aggregates / Crusher Dust"</item>
        <item>"Other - Aggregates / River Gravel"</item>
        <item>"Other - Asbestos"</item>
        <item>"Other - Asphalt"</item>
        <item>"Other - Bitumen"</item>
        <item>"Other - Cardboard"</item>
        <item>"Other - Common Bricks"</item>
        <item>"Other - Cement / Portland"</item>
        <item>"Other - Clay / Dry"</item>
        <item>"Other - Clay / Wet"</item>
        <item>"Other - Coal / Broken"</item>
        <item>"Other - Coal / Solid"</item>
        <item>"Other - Concrete / NOT reinforced"</item>
        <item>"Other - Cork / Normal"</item>
        <item>"Other - Cork / Compressed"</item>
        <item>"Other - Decorative Gravels / Scoria"</item>
        <item>"Other - Decorative Gravels / Granite"</item>
        <item>"Other - Decorative Gravels / General"</item>
        <item>"Other - Fibre Cement Sheet / Uncompressed"</item>
        <item>"Other - Fibre Cement Sheet / Compressed"</item>
        <item>"Other - Fibre Cement Sheet / Fire Resistant Lining Sheet"</item>
        <item>"Other - Fibre Cement Sheet / Insulating Sheet"</item>
        <item>"Other - Garbage / Household Waste"</item>
        <item>"Other - Glass Window / Soda / Lime"</item>
        <item>"Other - Granite / Basalt / Trachyte"</item>
        <item>"Other - Gravel"</item>
        <item>"Other - Ice / Crushed"</item>

        
        <item>"Other - Ice / Solid"</item>
        <item>"Other - Landscaping Soil / Garden Mix"</item>
        <item>"Other - Landscaping Soil / Lawn Builder"</item>
        <item>"Other - Landscaping Soil / Turf Underlay"</item>
        <item>"Other - Landscaping Soil / Top Soil"</item>
        <item>"Other - Leather"</item>
        <item>"Other - Limestone / Dense"</item>
        <item>"Other - Limestone / General"</item>
        <item>"Other - Marble"</item>
        <item>"Other - Mortar / Cement Mix"</item>
        <item>"Other - Mulch / Redwood Chip"</item>
        <item>"Other - Mulch / Pine Bark Mulch"</item>
        <item>"Other - Mulch / Cypress Mulch"</item>
        <item>"Other - Mulch / Eucalyptus Mulch"</item>
        <item>"Other - Mulch / Leaf Mulch"</item>
        <item>"Other - Paper"</item>
        <item>"Other - Plaster"</item>
        <item>"Other - Sandstone"</item>
        <item>"Other - Sand / Brickies"</item>
        <item>"Other - Sand / General Dry"</item>
        <item>"Other - Sand / General Wet"</item>
        <item>"Other - Sand / River"</item>
        <item>"Other - Sand / Sydney"</item>
        <item>"Other - Sand / Fill"</item>
        <item>"Other - Sugar"</item>
        <item>"Other - Tar"</item>
        <item>"Other - Turf"</item>
        <item>"Other - Wool"</item>
        <item>"Timber - Ash"</item>
        <item>"Timber - Bamboo"</item>
        <item>"Timber - Blackbutt"</item>
        <item>"Timber - CD Structural Plywood"</item>
        <item>"Timber - Cypress Pine / Australian"</item>
        <item>"Timber - Douglas Fir"</item>
        <item>"Timber - Grey Gum"</item>
        <item>"Timber - Grey Ironbark"</item>
        <item>"Timber - Hoop"</item>

        
        <item>"Timber - Jarrah"</item>
        <item>"Timber - Maple"</item>
        <item>"Timber - Marine Plywood"</item>
        <item>"Timber - MDF"</item>
        <item>"Timber - Particle Board"</item>
        <item>"Timber - Radiata Pine / Australian"</item>
        <item>"Timber - Radiata Pine / New Zealand"</item>
        <item>"Timber - Redwood"</item>
        <item>"Timber - Spotted Gum"</item>
        <item>"Timber - Tallow Wood"</item>
        <item>"Timber - Teak"</item>
        <item>"Timber - Turpentine"</item>
        <item>"Timber - T&amp;G Particle Board Flooring"</item>
        <item>"Timber - Vic Ash"</item>
        <item>"Timber - White Mahogany"</item>
        <item>"Timber - Willow"</item>
    </string-array>
</resources>