<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:id="@id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5.0dp"
        android:gravity="center"
        android:text="@string/app_name_original"
        android:textAppearance="?android:textAppearanceMedium"
        android:textStyle="bold"
        android:typeface="serif"
        android:visibility="gone" />

    <ScrollView
        android:id="@id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.0"
        android:fillViewport="true" >

        <LinearLayout
            android:id="@id/optionsList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:padding="10.0dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/button5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/introduction"
                    android:drawableRight="@drawable/next_item"
                    android:text="@string/guides" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/button1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:drawableLeft="@drawable/introduction"
                    android:drawableRight="@drawable/next_item"
                    android:text="@string/manual" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/button3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:drawableLeft="@drawable/introduction"
                    android:drawableRight="@drawable/next_item"
                    android:text="@string/safety" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/button2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:drawableLeft="@drawable/introduction"
                    android:drawableRight="@drawable/next_item"
                    android:text="@string/tools" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <include
        layout="@layout/google_ad_banner"
        />

    <include layout="@layout/action_bar" />

</LinearLayout>