<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5.0dp"
        android:gravity="center"
        android:text="@string/app_name_original"
        android:textAppearance="?android:textAppearanceMedium"
        android:textStyle="bold"
        android:typeface="serif"
        android:visibility="gone" />

    <ScrollView
        android:id="@id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:id="@id/optionsList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:padding="10dp"
            android:weightSum="10">

            <LinearLayout
                android:id="@+id/layout_calculations"
                style="@android:style/Widget.Button"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:src="@drawable/calculator" />

                <TextView
                    android:id="@+id/text_calculations"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="7"
                    android:gravity="center"
                    android:text="@string/calculations"
                    android:textColor="@android:color/black" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:src="@drawable/next_item" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.1" />

            <LinearLayout
                android:id="@+id/layout_notes"
                style="@android:style/Widget.Button"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:src="@drawable/note" />

                <TextView
                    android:id="@+id/text_notes"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="7"
                    android:gravity="center"
                    android:text="@string/notes"
                    android:textColor="@android:color/black" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:src="@drawable/next_item" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.1" />

            <LinearLayout
                android:id="@+id/layout_questions"
                style="@android:style/Widget.Button"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:src="@drawable/quotations" />

                <TextView
                    android:id="@+id/text_questions"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="7"
                    android:gravity="center"
                    android:text="@string/questions"
                    android:textColor="@android:color/black" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:src="@drawable/next_item" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <include
        layout="@layout/google_ad_banner"
        />

    <include layout="@layout/action_bar" />

</RelativeLayout>